--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.128.0",
     "firebase-admin>=7.1.0",
     "flet[all]==0.80.1",
+    "pyinstaller>=6.17.0",
     "requests>=2.32.5",
     "uvicorn>=0.40.0",
 ]
